--- a/paper/src/main/resources/messages/es.yml
+++ b/paper/src/main/resources/messages/es.yml
@@ -3,27 +3,27 @@ config-version: "23"
 messages:
   prefix: '<gradient:#2E8B57:#48D1CC>[CustomNameplates] </gradient>'
   reload: '<white>Recargado! </white>'
-  cooldown: '<white>¡El preestreno sigue en curso!</white>'
-  generate: '<white>El paquete de recursos está generando...</white>'
-  generate-done: '<white>Se ha generado un paquete de recursos. No olvides reinstalar el paquete de recursos.</white>'
-  no-nameplate: 'No Nameplate'
-  preview: '<white>¡Ahora, la vista previa de su placa de identificación (ir a la tercera persona para ver)!</white>'
+  cooldown: '<white>¡La previsualización sigue en curso!</white>'
+  generate: '<white>Generando paquete de recursos...</white>'
+  generate-done: '<white>Se ha generado el paquete de recursos. No olvides reinstalarlo!</white>'
+  no-nameplate: 'Sin Nameplate'
+  preview: '<white>¡Ya puedes ver tu Nameplate (cambia a tercera persona <F5> para ver)!</white>'
 
-  equip-nameplates: '<white>Placa de identificación equipada con éxito {Nameplate}. </white><yellow><click:run_command:/nameplates preview>[click para preview]'
-  force-equip-nameplates: '<white>Equipado con éxito nameplate {Nameplate} a {Player}.</white>'
+  equip-nameplates: '<white>Se ha equipado la Nameplate {Nameplate}. </white><yellow><click:run_command:/nameplates preview>[click para preview]'
+  force-equip-nameplates: '<white>Se le ha equipado la Nameplate {Nameplate} a {Player}.</white>'
   unequip-nameplates: '<white>Has quitado tu nameplate</white>'
-  force-unequip-nameplates: '<white>Eliminado con éxito {Player}''s nameplate!</white>'
-  not-exist-nameplates: '<white>Este nameplate no existe!</white>'
-  not-available-nameplates: '<white>Este nameplate no esta actualmente disponible!</white>'
+  force-unequip-nameplates: '<white>Le has quitado su nameplate a {Player}!</white>'
+  not-exist-nameplates: '<white>Esta nameplate no existe!</white>'
+  not-available-nameplates: '<white>Esta nameplate no está disponible!</white>'
   available-nameplates: '<white>Nameplates Disponibles: {Nameplate}.</white>'
-  have-no-nameplates: '<white>No tienes ningun nameplate aun'
-  force-preview: '<white>Forced {Player} to preview the nameplate</white>'
+  have-no-nameplates: '<white>Aún no tienes una nameplate'
+  force-preview: '<white>Forzaste a {Player} a ver su nameplate</white>'
 
-  equip-bubbles: '<white>Correctamente equipado chatting bubbles {Bubble}</white>'
-  force-equip-bubbles: '<white>Correctamente equipdo chatting bubbles {Bubble}</white>'
-  unequip-bubbles: '<white>Se ha removido tu chatting bubbles</white>'
-  force-unequip-bubbles: '<white>Se ha removido tu chatting bubbles</white>'
-  not-exist-bubbles: '<white>Este bubble no existe</white>'
-  not-available-bubbles: '<white>Este bubble no esta actualmente disponible!</white>'
-  available-bubbles: '<white>Bubbles Disponibles: {Bubble}</white>'
-  have-no-bubbles: '<white>Todavía no tienes ningun bubble'
+  equip-bubbles: '<white>Has activado los globos de diálogo {Bubble}</white>'
+  force-equip-bubbles: '<white>Has activado los globos de diálogo {Bubble}</white>'
+  unequip-bubbles: '<white>Se han desactivado los globos de diálogo</white>'
+  force-unequip-bubbles: '<white>Has desactivado los globos de diálogo de {Player}!</white>'
+  not-exist-bubbles: '<white>Este globo no existe!</white>'
+  not-available-bubbles: '<white>Este globo no está disponible!</white>'
+  available-bubbles: '<white>Globos Disponibles: {Bubble}</white>'
+  have-no-bubbles: '<white>Aún no tienes un globo de diálogo'
