--- a/paper/src/main/resources/config.yml
+++ b/paper/src/main/resources/config.yml
@@ -40,6 +40,7 @@ integrations:
     VentureChat: false
     HuskChat: false
     CarbonChat: false
+    AdvancedChat: false
 
 resource-pack:
   # disable resource pack generation on server start
