--- a/backend/src/main/resources/configs/bossbar.yml
+++ b/backend/src/main/resources/configs/bossbar.yml
@@ -1,38 +1,39 @@
-# You can create as many sections as you want for more bossbars
+# You can create as many bossbar sections as you'd like
 bossbar_1:
-  # Color (BLUE, GREEN, PINK, PURPLE, RED, WHITE, YELLOW)
+  # Choose the color of the bossbar (Options: BLUE, GREEN, PINK, PURPLE, RED, WHITE, YELLOW)
   color: YELLOW
-  # Overlay (It can be either "progress", "notched_6", "notched_10", "notched_12" or "notched_20")
+  # Decide how the progress bar looks (Options: "progress", "notched_6", "notched_10", "notched_12", "notched_20")
   overlay: PROGRESS
-  # The frequency of checking conditions for a bar, measured in ticks
-  check-frequency: 10
   conditions:
-    permission: "bossbar.show"
-  # Bar's content would be shown as the following order
+    condition_1:
+      type: permission
+      refresh-interval: 20  # How often, in ticks, to check if the player still has the required permission
+      value:
+        - bossbar.show
+  # The bossbar will cycle through the text in this exact order:
   text-display-order:
     1:
-      # Measured in ticks
+      # Time (in ticks) this text stays on the screen (100 ticks = 5 seconds)
       duration: 100
-      # Text content
+      # What message to display in the bossbar
       text: '%nameplates_background_hello%'
-      # The frequency of refreshing the text, the lower the value is, the faster the placeholders are updated
-      # measured in ticks, -1 = disable refreshing
-      refresh-frequency: -1
     2:
+      # Display for 10 seconds
       duration: 200
       text: '%nameplates_background_time%  %nameplates_background_location%  %nameplates_background_weather%'
+      # How often to refresh this text, in ticks (1 tick = 1/20 of a second)
       refresh-frequency: 1
     3:
+      # Show for 5 seconds
       duration: 100
       text: '%nameplates_background_update%'
-      refresh-frequency: -1
-      # Optional
-      # When enabling conditions, make sure that players would see at least one in the order,
-      # otherwise it will fall into a dead cycle
-      # If your player doesn't meet the conditions, it would be skipped
-      # This condition would only be checked once until the next turn
+      # Optional extra control:
+      # Make sure at least one bossbar message is shown, or else it could result in an endless cycle with nothing visible!
+      # If the player doesn’t meet the condition, this message will be skipped.
+      # Conditions are only checked once per cycle until it comes back around.
       conditions:
-        permission: nameplates.admin
+        permission: nameplates.admin  # Only players with this permission will see this specific message
         equals:
+          # Compare two values and act based on the result
           value1: '%nameplates_is-latest%'
-          value2: 'false'
+          value2: 'false'  # Only display if the value is "false"
