--- a/backend/src/main/resources/config.yml
+++ b/backend/src/main/resources/config.yml
@@ -109,5 +109,5 @@ other-settings:
     asciillager:
       asciillager: asciillager.png
     unicode:
-      unicode: unicode_page_%s.png
+      unicode: unicode_page_%02x.png
     ttf: {}
