--- a/common/src/main/resources/custom-nameplates.properties
+++ b/common/src/main/resources/custom-nameplates.properties
@@ -25,3 +25,4 @@ commons-pool=${commons_pool_version}
 jedis=${jedis_version}
 h2-driver=${h2_driver_version}
 sqlite-driver=${sqlite_driver_version}
+lwjgl=${lwjgl_version}
