--- a/gradle.properties
+++ b/gradle.properties
@@ -41,6 +41,7 @@ placeholder_api_version=2.11.6
 vault_version=1.7
 guava_version=33.2.0-jre
 lz4_version=1.8.0
+lwjgl_version=3.3.4
 
 # Proxy settings
 systemProp.socks.proxyHost=127.0.0.1
