--- a/common/src/main/resources/custom-nameplates.properties
+++ b/common/src/main/resources/custom-nameplates.properties
@@ -25,4 +25,5 @@ commons-pool=${commons_pool_version}
 jedis=${jedis_version}
 h2-driver=${h2_driver_version}
 sqlite-driver=${sqlite_driver_version}
-lwjgl=${lwjgl_version}
+fontbox=${fontbox_version}
+pdfbox-io=${pdfbox_io_version}
