--- a/gradle.properties
+++ b/gradle.properties
@@ -40,8 +40,8 @@ exp4j_version=0.4.8
 placeholder_api_version=2.11.6
 vault_version=1.7
 guava_version=33.2.0-jre
-lz4_version=1.8.0
-lwjgl_version=3.3.4
+fontbox_version=3.0.3
+pdfbox_io_version=3.0.3
 
 # Proxy settings
 systemProp.socks.proxyHost=127.0.0.1
