--- a/common/src/main/resources/custom-nameplates.properties
+++ b/common/src/main/resources/custom-nameplates.properties
@@ -27,3 +27,4 @@ h2-driver=${h2_driver_version}
 sqlite-driver=${sqlite_driver_version}
 byte-buddy=${byte_buddy_version}
 commons-io=${commons_io_version}
+lwjgl=${lwjgl_version}
