--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Project settings
 # Rule: [major update].[feature update].[bug fix]
-project_version=3.0.0-beta-5
-config_version=37
+project_version=3.0.0
+config_version=29
 project_group=net.momirealms
 
 # Dependency settings
