--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,17 @@ project_version=3.0.2
 config_version=30
 project_group=net.momirealms
 
+# Supported languages
+lang=en,zh_cn
+
 # Dependency settings
 paper_version=1.20.4
 jetbrains_annotations_version=24.0.0
 slf4j_version=2.0.13
 log4j_version=2.23.1
-gson_version=2.10.1
-asm_version=9.7
-asm_commons_version=9.7
+gson_version=2.11.0
+asm_version=9.7.1
+asm_commons_version=9.7.1
 jar_relocator_version=1.7
 h2_driver_version=2.2.224
 sqlite_driver_version=3.46.1.0
@@ -32,13 +35,13 @@ mysql_driver_version=9.0.0
 hikari_version=5.1.0
 commons_pool_version=2.12.0
 bstats_version=3.0.2
-geantyref_version=1.3.15
+geantyref_version=1.3.16
 caffeine_version=3.1.8
 jedis_version=5.1.5
 exp4j_version=0.4.8
 placeholder_api_version=2.11.6
 vault_version=1.7
-guava_version=33.2.0-jre
+guava_version=33.3.1-jre
 commons_io_version=2.17.0
 lwjgl_version=3.3.4
 
