--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project settings
 # Rule: [major update].[feature update].[bug fix]
-project_version=3.0.5
+project_version=3.0.6
 config_version=31
 project_group=net.momirealms
 
@@ -46,9 +46,9 @@ commons_io_version=2.17.0
 lwjgl_version=3.3.4
 
 # Proxy settings
-#systemProp.socks.proxyHost=127.0.0.1
-#systemProp.socks.proxyPort=7890
-#systemProp.http.proxyHost=127.0.0.1
-#systemProp.http.proxyPort=7890
-#systemProp.https.proxyHost=127.0.0.1
-#systemProp.https.proxyPort=7890
+systemProp.socks.proxyHost=127.0.0.1
+systemProp.socks.proxyPort=7890
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7890
