--- a/gradle.properties
+++ b/gradle.properties
@@ -46,9 +46,9 @@ commons_io_version=2.17.0
 lwjgl_version=3.3.4
 
 # Proxy settings
-systemProp.socks.proxyHost=127.0.0.1
-systemProp.socks.proxyPort=7890
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=7890
-systemProp.https.proxyHost=127.0.0.1
-systemProp.https.proxyPort=7890
+#systemProp.socks.proxyHost=127.0.0.1
+#systemProp.socks.proxyPort=7890
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=7890
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=7890
