--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -15,6 +15,7 @@ softdepend:
   - AdvancedChat
   - VentureChat
   - EssentialsChat
+  - WorldGuard
 permissions:
   nameplates.command.equip:
     default: true
