--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project settings
 # Rule: [major update].[feature update].[bug fix]
-project_version=3.0.9
+project_version=3.0.10
 config_version=32
 project_group=net.momirealms
 
@@ -44,6 +44,7 @@ vault_version=1.7
 guava_version=33.3.1-jre
 commons_io_version=2.17.0
 lwjgl_version=3.3.4
+fastutil_version=8.5.15
 
 # Proxy settings
 #systemProp.socks.proxyHost=127.0.0.1
