--- a/backend/src/main/resources/configs/custom-placeholders.yml
+++ b/backend/src/main/resources/configs/custom-placeholders.yml
@@ -2,21 +2,22 @@
 conditional-text:
   actionbar:
     priority_1:
-      text: '%np_background_other_actionbar%'
+      text: '%np_background_other_actionbar%' # hides the money hud when a player rides something or dives in water
       conditions:
         '||':
+          is-passenger: true
           '!=':
             value1: '%player_remaining_air%'
             value2: "300"
           '!gamemode': survival
     priority_2:
-      text: '%np_static_money_hud%%np_offset_-179%%np_static_other_actionbar%'
+      text: '%np_static_money_hud%%np_offset_-179%%np_static_other_actionbar%' # displays the money hud + other plugin's actionbar message
       conditions:
         '!equals':
           value1: '%np_actionbar%'
           value2: ""
     priority_3:
-      text: '%np_static_money_hud%'
+      text: '%np_static_money_hud%' # displays the money hud only
   weather:
     priority_1:
       text: 'Sunny'
