improved default configs

--- a/backend/src/main/resources/configs/custom-placeholders.yml
+++ b/backend/src/main/resources/configs/custom-placeholders.yml
@@ -131,30 +131,31 @@ switch-text:
     switch: "%np_equipped_nameplate%"
     default: ""
     case:
-      'wither': "<gradient:#FF0000:#000000:%np_gradient_3%>"
       'halloween': "<gradient:#FF0000:#000000:%np_gradient_3%>"
       'hutao': "<gradient:#FFFFFF:#FF4500:%np_gradient_3%>"
       'rabbit': "<gradient:#FFFFFF:#DB7093:%np_gradient_3%>"
       'starsky': "<gradient:#FFFFF0:#696969:%np_gradient_3%>"
       'trident': "<gradient:#E1FFFF:#008B8B:%np_gradient_10%>"
-      'cheems': "<gradient:#C0C0C0:#F5F5F5:%np_gradient_5%>"
       'egg': "<gradient:#FFFFFF:#FFA500:%np_gradient_5%>"
-      'cat': "<gradient:#FFFFFF:#1E90FF:%np_gradient_5%>"
-      'xmas': "<gradient:#FFFFFF:#FF4500:%np_gradient_5%>"
+      'xmas': "<WHITE>"
+      'angel': "<#8B4513>"
+      'sign': "<BLACK>"
+      'banner': "<WHITE>"
+      'enter': "<WHITE>"
   nameplate_color_suffix:
     switch: "%np_equipped_nameplate%"
     default: ""
     case:
-      'wither': "</gradient>"
       'halloween': "</gradient>"
       'hutao': "</gradient>"
       'rabbit': "</gradient>"
       'starsky': "</gradient>"
       'trident': "</gradient>"
-      'cheems': "</gradient>"
       'egg': "</gradient>"
-      'cat': "</gradient>"
-      'xmas': "</gradient>"
+      'xmas': "</WHITE>"
+      'angel': "</#8B4513>"
+      'sign': "</WHITE>"
+      'enter': "</WHITE>"
   world:
     switch: '%player_world%'
     case:
