We need more work

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 # Project settings
 # Rule: [major update].[feature update].[bug fix]
-project_version=3.0.11
 config_version=32
 project_group=net.momirealms
 
@@ -51,5 +50,9 @@ fastutil_version=8.5.15
 #systemProp.socks.proxyPort=7890
 #systemProp.http.proxyHost=127.0.0.1
 #systemProp.http.proxyPort=7890
-#systemProp.https.proxyHost=127.0.0.1
-#systemProp.https.proxyPort=7890
+systemProp.socks.proxyHost=127.0.0.1
+systemProp.socks.proxyPort=7890
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7890
